add_skipper_benchmark(benchmark_sequential_set)
add_skipper_benchmark(benchmark_sequential_map)

add_skipper_benchmark(benchmark_concurrent_set)
target_link_libraries(benchmark_concurrent_set PRIVATE pthread)

add_skipper_benchmark(benchmark_concurrent_map)
target_link_libraries(benchmark_concurrent_map PRIVATE pthread)
